--- a/.github/workflows/cicd-build.yml
+++ b/.github/workflows/cicd-build.yml
@@ -12,16 +12,7 @@ on:
 jobs:
 
   build:
-    strategy:
-      matrix:
-        include:
-          - os: "ubuntu-22.04"
-            build-script: "./gradlew clean build"
-          - os: "macos-12"
-            build-script: "./gradlew clean build"
-          - os: "windows-2022"
-            build-script: "gradlew.bat clean build"
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
@@ -37,4 +28,4 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Gradle
-        run: ${{ matrix.build-script }}
+        run: "./gradlew clean build"
