test-resource: 1.1.0 plugin: 3.5.2

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id("com.github.johnrengelman.shadow") version "7.1.2"
-    id("io.micronaut.application") version "3.5.1"
-    id("io.micronaut.test-resources") version "3.5.1"
+    id("io.micronaut.application") version "3.5.2"
+    id("io.micronaut.test-resources") version "3.5.2"
 }
 
 version = "0.1"
@@ -48,6 +48,7 @@ micronaut {
         annotations("org.experiment.*")
     }
     testResources {
+        version = "1.1.0"
         additionalModules.add("jdbc-postgresql")
     }
 }
